fix(things): big refactor part2: DTO objects, mappers, other related objects.